<resources>
    <string name="app_name">REMAR citizen</string>

    <string name="toolbar_app_name">REMAR_</string>
    <string name="toolbar_app_sub_name">CITIZEN</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="user_agreement">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis consequat orci. Quisque ullamcorper ultrices vehicula. Integer in nibh eu arcu aliquet varius. Nam eleifend condimentum ipsum facilisis blandit. Maecenas dolor arcu, facilisis a auctor sit amet, posuere quis libero. Mauris tristique, sapien maximus suscipit laoreet, nisi quam vulputate metus, vel porta turpis turpis sed arcu. Aenean consectetur vulputate libero, ac tempor lacus maximus quis. Pellentesque scelerisque euismod justo. Proin vel vehicula eros, id maximus velit. Curabitur ultrices gravida tempor. Cras at neque aliquam, venenatis urna nec, efficitur erat.

Praesent tempor augue risus, et ultricies tellus gravida nec. Aliquam erat volutpat. Vestibulum ultrices ligula at nibh efficitur, nec facilisis quam fermentum. Ut orci lectus, pretium nec turpis eget, viverra placerat lorem. Praesent velit ante, accumsan vel cursus id, facilisis in orci. Nulla viverra viverra metus quis faucibus. Integer eleifend gravida sem, ac sodales quam consectetur vel. Nunc cursus lobortis elit, suscipit tempor tortor tempus eu. Aenean in quam eget risus imperdiet interdum in eget nibh. Suspendisse porta suscipit metus at scelerisque. Donec felis nisi, scelerisque vel feugiat eu, euismod ut enim. Donec ac laoreet sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consequat euismod tempus. Phasellus dapibus augue in diam luctus congue. Quisque aliquet lobortis nulla, nec suscipit erat porta a.

Etiam quis ultrices velit. Vivamus eleifend magna at est tempor, eu fringilla massa dapibus. Suspendisse et mattis sem, sit amet varius lacus. Aenean sit amet metus sed augue molestie iaculis a at turpis. Mauris vestibulum enim congue ante porta efficitur. Phasellus eu nibh id ligula tincidunt facilisis. Vivamus euismod sem non posuere pharetra. Nam fringilla ipsum leo, vel faucibus odio rutrum ut. Etiam lacinia ex at sem hendrerit, eget interdum velit dapibus. Morbi quis diam id odio pulvinar cursus ac vitae sapien. Nullam a augue eu nisl porttitor posuere.

Suspendisse fermentum, erat at ullamcorper vehicula, arcu dui commodo libero, nec vehicula urna nisl in augue. Aliquam erat volutpat. Maecenas viverra vitae ex nec facilisis. Pellentesque maximus id odio eget cursus. Pellentesque eget libero faucibus, ultrices est venenatis, blandit enim. Morbi quis pretium est, non mollis nibh. In hac habitasse platea dictumst. Ut accumsan risus erat, nec faucibus erat lobortis nec. Vivamus vitae arcu sollicitudin, commodo tellus at, ullamcorper dui. Mauris quis lacus id velit posuere vestibulum a nec felis. Curabitur aliquam odio at quam iaculis, ac finibus ligula facilisis. Praesent ullamcorper, orci id aliquet rhoncus, metus libero rutrum velit, sed luctus nibh felis id leo. Praesent venenatis nisi et tristique feugiat. Nullam rhoncus vehicula nisl in venenatis. Ut ultricies at metus lacinia ornare.

Aliquam porta dui eu quam egestas, eu sollicitudin lacus facilisis. Donec laoreet neque lectus, ac vehicula sem elementum et. Vivamus nec cursus dui. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean dapibus arcu lectus, quis feugiat ligula feugiat vel. Mauris auctor neque in quam dignissim auctor. Vestibulum ac tempus justo, non mollis nunc. Nunc vestibulum ligula ut maximus feugiat. </string>

    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="internal_error">An internal error occurred.  Please restart.</string>
    <string name="back_button">Previous</string>
    <string name="forward_button">Forward</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>

    <string name="back">Costas</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="maybe">Não sei</string>

    <string name="only_day">Somente de dia</string>
    <string name="only_night">Somente de noite</string>
    <string name="day_and_night">Dia e noite</string>
    <string name="day_night_unknown">Não sei se a andada ocorreu de dia ou de noite</string>

    <string name="done">Done</string>
    <string name="thank_you">Muito obrigado pela participação!</string>
    <string name="citizen_scientist">Agora você é um cientista cidadão!</string>
    <string name="thank_you_toast">Your answers have been submitted.</string>

    <string name="enter_name">Full name</string>
    <string name="enter_email">Email address</string>

    <string name="crab_title_0">Monitoramento do Caranguejo-uçá</string>
    <string name="crab_title_1">Monitoramento do Guaiamum</string>

    <string name="preference_session_id">session_id</string>

    <string name="url_login">http://40180582.pythonanywhere.com/static/login</string>

    <string-array name="months">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Marco</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Septembro</item>
        <item>Outubro</item>
        <item>Novembro Dezembro</item>
    </string-array>

    <string-array name="years">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <string name="pref_postFrequency_title">Post Frequency</string>
    <string name="pref_postFrequency_summary">The frequency with which the app attempts to post answers to the web.</string>
    <string-array name="pref_postFrequency_entries">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="pref_postFrequency_values">
        <item>60000</item>
        <item>300000</item>
        <item>900000</item>
        <item>3600000</item>
        <item>10800000</item>
        <item>86400000</item>
    </string-array>
    <string name="pref_postFrequency_default">3600000</string>

    <string name="menu">Menu</string>

    <string name="calendar_legend_new_moon">Lua nova</string>
    <string name="calendar_legend_full_moon">Lua cheia</string>

    <string name="andada_new_0">Houve andada após a lua nova</string>
    <string name="andada_full_0">Houve andada após a lua cheia</string>
    <string name="andada_new_1"><b>Não</b> houve andada após a lua nova</string>
    <string name="andada_full_1"><b>Não</b> houve andada após a lua cheia</string>

</resources>
