<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.hintofbasil.crabbler.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/first_name"
        />

    <EditText
        android:id="@+id/surname_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/surname"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textWebPassword"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />

</LinearLayout>
