<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/toolbar_horizontal_margin"
    android:paddingRight="@dimen/toolbar_horizontal_margin"
    android:paddingTop="@dimen/toolbar_vertical_margin"
    android:paddingBottom="@dimen/toolbar_vertical_margin" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_app_name"
            android:textSize="@dimen/toolbar_title"
            android:textStyle="bold"
            android:textColor="@color/toolbarTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_app_sub_name"
            android:layout_gravity="bottom"
            android:textSize="@dimen/toolbar_title_smaller"
            android:textStyle="bold"
            android:textColor="@color/toolbarTitle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" >

        <LinearLayout
            android:id="@+id/toolbar_images"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_image_height"
            android:orientation="horizontal"
            android:layout_toLeftOf="@+id/toolbar_menu_button"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/toolbar_image_height"
                android:adjustViewBounds="true"
                android:layout_marginLeft="@dimen/toolbar_image_padding"
                android:src="@drawable/napier"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/toolbar_image_height"
                android:adjustViewBounds="true"
                android:layout_marginLeft="@dimen/toolbar_image_padding"
                android:src="@drawable/ufsb" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toolbar_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:onClick="menuClick"
            android:background="@drawable/square_black_border"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textSize="@dimen/toolbar_menu"
                android:textColor="@color/toolbarTitle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>