<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questions.QuestionExpanders.DateRangeExpander">

    <include layout="@layout/include_toolbar"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/back_next_include"
        android:layout_below="@id/toolbar" >

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <include layout="@layout/include_image_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/description"
                android:layout_marginBottom="@dimen/description_margin_bottom"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/description_margin_bottom" >

                <CheckBox
                    android:id="@+id/chk_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/checkbox_text"
                    android:text="@string/yes"/>

                <CheckBox
                    android:id="@+id/chk_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/checkbox_text"
                    android:text="@string/no"/>

                <CheckBox
                    android:id="@+id/chk_maybe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/checkbox_text"
                    android:text="@string/maybe"/>

            </LinearLayout>

            <TextView
                android:id="@+id/extra_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/description"
                android:layout_marginBottom="@dimen/description_margin_bottom"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/extra_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                >

                <!-- TODO remove fixed height -->
                <ListView
                    android:id="@+id/extra_listview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:choiceMode="singleChoice"
                    android:listSelector="@drawable/list_background"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbarSize="20dp"
                    android:visibility="gone"/>

            </LinearLayout>


                <TextView
                    android:id="@+id/manual_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protectedText"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/manual_protected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/include_back_next"
        android:id="@+id/back_next_include"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

</RelativeLayout>